# Meta-hackathon

./: .gitignore  Dockerfile  README.md  app.py  check_all.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  results.json  scenario_config.json  smoke_test.py  validate.py
agents/: __init__.py  baselines.py
env/: __init__.py  dc_power_flow.py  grid_env.py  ieee14.py  models.py
scenarios/: __init__.py  scenarios.py
server/: app.py
tasks/: __init__.py  graders.py
tests/: test_env.py
