[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "power_grid_env"
version = "1.0.0"
description = "Power Grid Optimization Environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "gradio>=4.25.0",
    "plotly>=5.20.0",
    "openai>=1.14.0"
]
